--- a/Navbar/style.css
+++ b/Navbar/style.css
@@ -1,10 +1,9 @@
 * {
 	margin: 0;
 }
-.nav1{
+.nav1 {
 	display: flex;
 	background-color: #23232e;
-	position: fixed;
 	top:0;
 	width: 100%;
 	height: 8vh;
@@ -13,24 +12,83 @@
 	align-items: center;
 	justify-content: space-around;
 }
-.logo1{
+.logo1 {
 	font-size: 1.8rem;
 }
-.text-nav1{
+.text-nav1 {
 	display: flex;
 	justify-content: space-around;
 }
-.text-nav1 a{
+.text-nav1 a { 
 	letter-spacing: 2px;
 }
 
-.link1{
+.link1 {
 	color: #fff;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 1rem;
 	padding: 1rem;
 }
-.link1:hover{
+.link1:hover {
 	background-color:#2C2B50; 
+}
+.nav2 {
+	font-family: system-ui, -apple-system, Helvetica, Arial;
+}
+.logo-search {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	height: 12vh;
+	background-color: #264156;
+	align-items: center;
+}
+.logo2 {
+	color: #fff;
+	font-size: 1.8rem;
+}
+.search {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+.search-input {
+	height: 5vh;
+	padding: 0 5rem 0 1rem;
+	width: 10vw;
+	font-size: 1rem;
+	border-radius: 4px 0 0 4px;
+	cursor: text;
+	outline: none;
+	border: none;
+}
+.search-button{
+	height: 5vh;
+	background-color: #3f6f96;
+	border: none;
+	width: 5vw;
+	border-radius: 0 4px 4px 0; 
+	color: #fff;
+	font-weight: bold;
+}
+.text-nav2 {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	background-color: #3f6f96;
+	height: 6vh;
+	text-transform: uppercase;
+}
+.text-nav2 a {
+	margin: 0 1rem 0 1rem;
+}
+.link2 {
+	font-size: 1rem;
+	text-decoration: none;
+	color: #fff;
+}
+.link2:hover{
+	border-bottom: 1px solid #fff;
 }
